fix issue Synthetic package output (package:flutter_gen) is deprecated: https://flutter.dev/to/flutter-gen-deprecation. In a future release, synthetic-package will default to `false` and will later be removed entirely.  Exciting sine flutter gen synthetic messed up.  i69 from Anna Leuschenko might still be worth considering.

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ unlinked_spec.ds
 **/android/key.properties
 **/android/.idea/
 **/android/app/debug
+**/android/app/.cxx
 **/android/app/profile
 **/android/app/release
 *.jks
