--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,13 +13,14 @@ on:
       - main
 
 jobs:
-  semantic-pull-request:
-    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/semantic_pull_request.yml@v1
+#  semantic-pull-request:
+#    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/semantic_pull_request.yml@v1
 
   build:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
+      min_coverage: 50
 
   spell-check:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/spell_check.yml@v1
@@ -27,3 +28,4 @@ jobs:
       includes: |
         **/*.md
       modified_files_only: false
+
