--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,6 +20,7 @@ jobs:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
+      format_directories: lib/src test
       min_coverage: 43.9
       format_line_length: 100 # was failing because localization which is auto-gen
 
