--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,11 +12,12 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: 0.19.0
-  flutter_riverpod: ^2.5.1
-  riverpod_annotation: ^2.3.5
-  freezed_annotation: ^2.4.1
-  json_annotation: ^4.8.1
+  intl: 0.19.0 # must be 0.19.0 for flutter_localizations
+  hooks_riverpod: ^2.6.1
+  flutter_hooks: ^0.21.2
+  riverpod_annotation: ^2.6.1
+  freezed_annotation: ^3.0.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   bdd_widget_test: 1.8.1
@@ -25,9 +26,9 @@ dev_dependencies:
     sdk: flutter
   mocktail: 1.0.4
   very_good_analysis: 7.0.0
-  riverpod_generator: ^2.4.0
-  freezed: ^2.4.7
-  json_serializable: ^6.7.1
+  riverpod_generator: ^2.6.5
+  freezed: ^3.0.4
+  json_serializable: ^6.9.4
 
 flutter:
   uses-material-design: true
