--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,25 +10,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.21.2
   flutter_localizations:
     sdk: flutter
-  intl: 0.19.0 # must be 0.19.0 for flutter_localizations
-  hooks_riverpod: ^2.6.1
-  flutter_hooks: ^0.21.2
-  riverpod_annotation: ^2.6.1
+  flutter_riverpod: ^2.6.0
   freezed_annotation: ^3.0.0
+  hooks_riverpod: ^2.6.1
+  intl: 0.19.0 # must be 0.19.0 for flutter_localizations
   json_annotation: ^4.9.0
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   bdd_widget_test: 1.8.1
   build_runner: 2.4.15
   flutter_test:
     sdk: flutter
-  mocktail: 1.0.4
-  very_good_analysis: 7.0.0
-  riverpod_generator: ^2.6.5
   freezed: ^3.0.4
   json_serializable: ^6.9.4
+  mocktail: 1.0.4
+  riverpod_generator: ^2.6.5
+  very_good_analysis: 7.0.0
 
 flutter:
   uses-material-design: true
