refactor code to improve readability and maintainability, update tests and dependencies, and add new features and tests for verse reference tracking and validation

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,8 @@ jobs:
     with:
       flutter_channel: stable
       format_directories: lib/src test
-      min_coverage: 43.9
+      min_coverage: 88.8
+      coverage_excludes: ""
       format_line_length: 100 # was failing because localization which is auto-gen
 
   spell-check:
