--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter_hooks: ^0.21.2
   flutter_localizations:
     sdk: flutter
-  flutter_riverpod: ^2.6.0
+  flutter_riverpod: 2.6.1
   freezed_annotation: ^3.0.0
   hooks_riverpod: ^2.6.1
   intl: 0.19.0 # must be 0.19.0 for flutter_localizations
@@ -22,11 +22,12 @@ dependencies:
 
 dev_dependencies:
   bdd_widget_test: 1.8.1
-  build_runner: 2.4.15
+  build_runner: ^2.4.15
   flutter_test:
     sdk: flutter
   freezed: ^3.0.4
   json_serializable: ^6.9.4
+  mockito: ^5.4.5
   mocktail: 1.0.4
   riverpod_generator: ^2.6.5
   very_good_analysis: 7.0.0
