update code coverage exclusions to ignore generated and localization files

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
       flutter_channel: stable
       format_directories: lib/src test
       min_coverage: 96.0
-      coverage_excludes: "*.g.dart app_localizations_*.dart "
+      coverage_excludes: "l10n/**,**.g.dart"
       format_line_length: 100 # was failing because localization which is auto-gen
 
   spell-check:
