--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,8 +21,8 @@ jobs:
     with:
       flutter_channel: stable
       format_directories: lib/src test
-      min_coverage: 96.0
-      coverage_excludes: "**/l10n/**,**.g.dart"
+      min_coverage: 99.0
+      coverage_excludes: "lib/l10n/**,**.g.dart"
       format_line_length: 100 # was failing because localization which is auto-gen
 
   spell-check:
