--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
       flutter_channel: stable
       format_directories: lib/src test
       min_coverage: 99.0
-      coverage_excludes: "lib/l10n/**,**.g.dart"
+      coverage_excludes: lib/l10/**
       format_line_length: 100 # was failing because localization which is auto-gen
 
   spell-check:
