--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,10 @@ environment:
   flutter: 3.29.2
 
 dependencies:
+  firebase_analytics: ^11.4.5
+  firebase_core: ^3.13.0
+  firebase_crashlytics: ^4.3.5
+  firebase_performance: ^0.10.1+5
   flutter:
     sdk: flutter
   flutter_hooks: ^0.21.2
@@ -16,7 +20,7 @@ dependencies:
   flutter_riverpod: 2.6.1
   freezed_annotation: ^3.0.0
   hooks_riverpod: ^2.6.1
-  intl: 0.19.0 # must be 0.19.0 for flutter_localizations
+  intl: ^0.19.0 # must be 0.19.0 for flutter_localizations
   json_annotation: ^4.9.0
   riverpod_annotation: ^2.6.1
 
@@ -35,3 +39,10 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   generate: true
+
+dependency_overrides:
+  async: ^2.13.0
+  fake_async: ^1.3.3
+  leak_tracker: ^10.0.9
+  material_color_utilities: ^0.12.0
+  vm_service: ^15.0.0
