--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: 3.29.2
 
 dependencies:
+  dio: ^5.4.0
   flutter:
     sdk: flutter
   flutter_hooks: ^0.21.2
@@ -17,7 +18,7 @@ dependencies:
   freezed_annotation: ^3.0.0
   hooks_riverpod: ^2.6.1
   http: ^1.3.0
-  intl: 0.19.0 
+  intl: 0.19.0
   json_annotation: ^4.9.0
   riverpod_annotation: ^2.6.1
 
