direct unedited results from the prompt "can you please switch from the existing gist to use https://gist.githubusercontent.com/neiljaywarner/0d875211cfc2478b0ffb295bc93916ab/raw/4df56fc9fa2c15bc276ff6de822794159ee154e9/show_memverses_2_verses.json" - does work

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -81,7 +81,7 @@ android {
     }
 
     flavorDimensions "default"
-    productFlavors { 
+    productFlavors {
         production {
             dimension "default"
             applicationIdSuffix ""
@@ -89,12 +89,13 @@ android {
         }
         staging {
             dimension "default"
-            applicationIdSuffix ".stg"
+            // applicationIdSuffix ".stg"
             manifestPlaceholders = [appName: "[STG] Memverse"]
         }
         development {
             dimension "default"
-            applicationIdSuffix ".dev"
+            //todo fix
+            // applicationIdSuffix ".dev"
             manifestPlaceholders = [appName: "[DEV] Memverse"]
         }
     }
