tried prompt something like please fix easy low hanging fruit from https://github.com/anirac-tech/memverse_project/pull/7

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,12 +89,11 @@ android {
         }
         staging {
             dimension "default"
-            // applicationIdSuffix ".stg"
             manifestPlaceholders = [appName: "[STG] Memverse"]
         }
         development {
             dimension "default"
-            //todo fix
+            // Keeping applicationIdSuffix commented out to avoid package name conflicts
             // applicationIdSuffix ".dev"
             manifestPlaceholders = [appName: "[DEV] Memverse"]
         }
