add todo to trigger pipeline and make show up in todos

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,6 +95,7 @@ android {
             dimension "default"
             // Keeping applicationIdSuffix commented out to avoid package name conflicts
             // applicationIdSuffix ".dev"
+            // TODO(neiljaywarner): Make sure this get fixed soon
             manifestPlaceholders = [appName: "[DEV] Memverse"]
         }
     }
