These are my results from "please fix tests"i think i ttyped "retry" from unknown error or timeout. pretty awesome that it added rps scripts, i hadn't heard of rps and it appears to be like derry but derry no changes in 2 years. I will say it's approach of ignoring for tests may not be the best

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,17 @@ dev_dependencies:
   riverpod_generator: ^2.6.5
   very_good_analysis: 7.0.0
 
+# Custom scripts for common tasks
+scripts:
+  test: flutter test --dart-define=FLUTTER_TEST=true
+  test_coverage: flutter test --dart-define=FLUTTER_TEST=true --coverage
+  clean_coverage: lcov --remove coverage/lcov.info 'lib/l10n' '**/*.g.dart' -o coverage/new_lcov.info
+  gen_coverage_html: genhtml coverage/new_lcov.info -o coverage/html
+  coverage: flutter test --dart-define=FLUTTER_TEST=true --coverage && lcov --remove coverage/lcov.info 'lib/l10n' '**/*.g.dart' -o coverage/new_lcov.info && genhtml coverage/new_lcov.info -o coverage/html
+  format: dart format . -l 100
+  analyze: flutter analyze
+  fix: dart fix --apply
+
 flutter:
   uses-material-design: true
   generate: true
