Refactor: Improve Pre-Commit Checks, Add AI Logging, and Enhance Code Quality
- Renamed `check_before_push.sh` to `check_before_commit.sh` and updated all references.
- Added a pre-commit hook to run `check_before_commit.sh` before each commit.
- Introduced AI interaction logging with branch-based naming for log files and automatic cleanup of old logs.
- Modified Firebender rules to include automatic AI log file creation and addition to git.
- Updated `main.yaml` to enforce 100% test coverage and revised coverage exclusion patterns.
- Added `CONTRIBUTING.md` with guidelines for git hooks and processes.
- Implemented test for test utilities in `test_utils_test.dart`.
- Improved `verse_repository.dart` by removing redundant comments and adjusting coverage ignores.
- Introduced `AppLogger` utility for controlled logging.
- Enhanced `check_before_commit.sh` to accurately report and validate 100% coverage.
- Fixed the extraction of the coverage percentage in `check_before_commit.sh` to ensure correct results and remove accidental output of `277)`.
- Removed redundant "Import for using TestMockDio type checking" comments and change multiline to single line coverage ignores.
- Added detailed AI interaction logging to document the development process.
- Update the git ignore to ignore all ai_prompts log files with exceptions for the current files.
-Added test script.
-Added git_hooks directory to store shared hooks.
-Added coderabbit pr review badge to readme.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,9 +21,9 @@ jobs:
     with:
       flutter_channel: stable
       format_directories: lib/src test
-      min_coverage: 91 # for now..
-      coverage_excludes: lib/l10n/arb/app_localizations_es.dart lib/l10n/arb/app_localizations_en.dart lib/l10n/arb/app_localizations.dart
-      format_line_length: 100 # was failing because localization which is auto-gen
+      min_coverage: 100
+      coverage_excludes: 'lib/l10n/* test/verse_repository_test.mocks.dart'
+      format_line_length: 100
 
   spell-check:
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/spell_check.yml@v1
