--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # Miscellaneous
+!*_ai_prompts.log
+!*_ai_prompts_and_responses.log
 *.class
 *.log
 *.pyc
@@ -80,7 +82,6 @@ unlinked_spec.ds
 **/ios/Flutter/Generated.xcconfig
 **/ios/Flutter/app.flx
 **/ios/Flutter/app.zip
-**/ios/Flutter/.last_build_id
 **/ios/Flutter/flutter_assets/
 **/ios/Flutter/flutter_export_environment.sh
 **/ios/ServiceDefinitions.json
