--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   hooks_riverpod: ^2.6.1
   intl: 0.19.0
   json_annotation: ^4.9.0
+  logger: ^2.0.2+1
   riverpod_annotation: ^2.6.1
 
 dev_dependencies:
