--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
       flutter_channel: stable
       format_directories: lib/src test
       min_coverage: 100
-      coverage_excludes: 'lib/l10n/* test/verse_repository_test.mocks.dart'
+      coverage_excludes: lib/l10n/arb/app_localizations_es.dart lib/l10n/arb/app_localizations_en.dart lib/l10n/arb/app_localizations.dart
       format_line_length: 100
 
   spell-check:
