--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,6 @@ environment:
 
 dependencies:
   dio: 5.8.0+1
-  firebase_analytics: ^11.4.5
-  firebase_core: ^3.13.0
-  firebase_crashlytics: ^4.3.5
-  firebase_performance: ^0.10.1+5
   flutter:
     sdk: flutter
   flutter_hooks: ^0.21.2
@@ -23,6 +19,7 @@ dependencies:
   hooks_riverpod: ^2.6.1
   intl: 0.19.0
   json_annotation: ^4.9.0
+  logger: ^2.0.2+1
   riverpod_annotation: ^2.6.1
 
 dev_dependencies:
@@ -53,10 +50,3 @@ scripts:
 flutter:
   uses-material-design: true
   generate: true
-
-dependency_overrides:
-  async: ^2.13.0
-  fake_async: ^1.3.3
-  leak_tracker: ^10.0.9
-  material_color_utilities: ^0.12.0
-  vm_service: ^15.0.0
