feat: Improve error handling, add image error builder, enhance testing, and streamline configuration
- Implemented an error builder for the login page image, displaying a custom widget when the image fails to load.
- Added support to run lcov and genhtml as dependencies in the `check_before_commit.sh` script.
- Modified `check_before_commit.sh` to run `dart fix --apply` before code formatting and analysis.
- Adjusted code coverage processing in `check_before_commit.sh` to remove more files and show report in browser.
- Upgraded coverage check to use numeric comparison against a minimum threshold.
- Added `isLoggedInProvider` to check if a user is logged in.
- Modified `auth_wrapper.dart` to use `isLoggedInProvider` and show a loading indicator while checking auth status.
- Fixed and improved widget testing to handle multiple or missing text widgets and added detailed error messages.
- Added an error and validation state to the reference gauge widget.
- Modified `check_before_commit.sh` to handle 100% coverage as valid.
- Fixed `i_enter_into_input_field.dart` to handle cases with multiple TextFields or missing index.
- Improved handling of empty test or failure to find widgets with more readable messages and help.
- Ensured that all user prompts are captured with timestamps in the AI log file.
- Updated `firebender.json` to enforce prompt logging and proper timestamp usage.
- Changed min coverage to 97 in `project_config.sh`.
- Added `MIN_COVERAGE_INT` to convert minimum coverage to an integer in the `extract-config` job of the GitHub workflow.
- Improved code and test coverage ignores, updated `lcov` command to remove more generated files.
- Fixed project config by only referencing percentage in one place.
- Fixed GitHub action failures by converting the minimum coverage into an integer.
- Updated the prompts log to use system time and fixed timestamp formatting.
- Fixed failing pipeline issue in `main.yaml` and `project_config.sh`.
- Fixed test widget tree issue by

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,7 +24,9 @@ jobs:
         run: |
           # Extract MIN_COVERAGE from project_config.sh
           MIN_COVERAGE=$(grep "MIN_COVERAGE=" scripts/project_config.sh | cut -d'=' -f2)
-          echo "min_coverage=$MIN_COVERAGE" >> $GITHUB_OUTPUT
+          # Convert to integer for the workflow requirement
+          MIN_COVERAGE_INT=$(printf "%.0f" $MIN_COVERAGE)
+          echo "min_coverage=$MIN_COVERAGE_INT" >> $GITHUB_OUTPUT
 
   build:
     needs: extract-config
