Mem 49 make very simple login screen (#13)
* Update main entry point for integration tests

Changes the entry point for integration tests from `main.dart` to `main_development.dart`.

* feat: add authentication and authorization features to the app, including secure storage and token management. smoke test works with the auth token saved on ios, about to uninstall and check with fresh login

* fix comments and see config_improvements_PR_description.md

* feat: Improve error handling, add image error builder, enhance testing, and streamline configuration

- Implemented an error builder for the login page image, displaying a custom widget when the image fails to load.
- Added support to run lcov and genhtml as dependencies in the `check_before_commit.sh` script.
- Modified `check_before_commit.sh` to run `dart fix --apply` before code formatting and analysis.
- Adjusted code coverage processing in `check_before_commit.sh` to remove more files and show report in browser.
- Upgraded coverage check to use numeric comparison against a minimum threshold.
- Added `isLoggedInProvider` to check if a user is logged in.
- Modified `auth_wrapper.dart` to use `isLoggedInProvider` and show a loading indicator while checking auth status.
- Fixed and improved widget testing to handle multiple or missing text widgets and added detailed error messages.
- Added an error and validation state to the reference gauge widget.
- Modified `check_before_commit.sh` to handle 100% coverage as valid.
- Fixed `i_enter_into_input_field.dart` to handle cases with multiple TextFields or missing index.
- Improved handling of empty test or failure to find widgets with more readable messages and help.
- Ensured that all user prompts are captured with timestamps in the AI log file.
- Updated `firebender.json` to enforce prompt logging and proper timestamp usage.
- Changed min coverage to 97 in `project_config.sh`.
- Added `MIN_COVERAGE_INT` to convert minimum coverage to an integer in the `extract-config

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,15 +13,28 @@ on:
       - main
 
 jobs:
-  #  semantic-pull-request:
-  #    uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/semantic_pull_request.yml@v1
+  extract-config:
+    runs-on: ubuntu-latest
+    outputs:
+      min_coverage: ${{ steps.extract.outputs.min_coverage }}
+    steps:
+      - uses: actions/checkout@v3
+      - id: extract
+        name: Extract configuration values
+        run: |
+          # Extract MIN_COVERAGE from project_config.sh
+          MIN_COVERAGE=$(grep "MIN_COVERAGE=" scripts/project_config.sh | cut -d'=' -f2)
+          # Convert to integer for the workflow requirement
+          MIN_COVERAGE_INT=$(printf "%.0f" $MIN_COVERAGE)
+          echo "min_coverage=$MIN_COVERAGE_INT" >> $GITHUB_OUTPUT
 
   build:
+    needs: extract-config
     uses: VeryGoodOpenSource/very_good_workflows/.github/workflows/flutter_package.yml@v1
     with:
       flutter_channel: stable
       format_directories: lib/src test
-      min_coverage: 100
+      min_coverage: ${{ needs.extract-config.outputs.min_coverage }}
       coverage_excludes: lib/l10n/arb/app_localizations_es.dart lib/l10n/arb/app_localizations_en.dart lib/l10n/arb/app_localizations.dart
       format_line_length: 100
 
