--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 
 environment:
   sdk: 3.7.2
-  flutter: 3.29.2
+  flutter: 3.29.3
 
 dependencies:
   dio: 5.8.0+1
@@ -36,6 +36,8 @@ dev_dependencies:
   mockito: ^5.4.5
   mocktail: 1.0.4
   network_image_mock: ^2.1.1
+  patrol: ^3.15.1
+  patrol_finders: ^2.7.2
   riverpod_generator: ^2.6.5
   very_good_analysis: 7.0.0
 
