--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 
 environment:
   sdk: 3.7.2
-  flutter: 3.29.2
+  flutter: 3.29.3
 
 dependencies:
   dio: 5.8.0+1
@@ -35,6 +35,9 @@ dev_dependencies:
   json_serializable: ^6.9.4
   mockito: ^5.4.5
   mocktail: 1.0.4
+  network_image_mock: ^2.1.1
+  patrol: ^3.15.1
+  patrol_finders: ^2.7.2
   riverpod_generator: ^2.6.5
   very_good_analysis: 7.0.0
 
@@ -49,6 +52,7 @@ scripts:
   analyze: flutter analyze
   fix: dart fix --apply
   test_live_login: flutter test integration_test/live_login_test.dart --flavor development --dart-define=USERNAME=$MEMVERSE_USERNAME --dart-define=PASSWORD=$MEMVERSE_PASSWORD --dart-define=CLIENT_ID=$MEMVERSE_CLIENT_ID
+  integration_test: flutter test integration_test
 
 flutter:
   uses-material-design: true
