Refactor: Update Flutter Version and Project Configuration
- Updated the Flutter SDK version in `pubspec.yaml` to `3.29.3`.
- Added `FLUTTER_VERSION` variable to `scripts/project_config.sh` to centralize the Flutter version used in the project and CI workflows, ensuring it matches `pubspec.yaml`.
- Adjusted the `extract-config` workflow in `.github/workflows/main.yaml` to read the `FLUTTER_VERSION` from `scripts/project_config.sh` and pass it as output.
- Updated the `build` workflow to use `FLUTTER_VERSION` extracted from the new `extract-config` output, replacing the hardcoded value.
- Removed unnecessary blank lines in the `lib/l10n/arb/app_localizations_en.dart` and `lib/l10n/arb/app_localizations_es.dart`
- Changed the function declaration from `void RegisterPlugins(flutter::PluginRegistry *registry)` to `void RegisterPlugins(flutter::PluginRegistry* registry)` in `windows/flutter/generated_plugin_registrant.cc`.
- Replaced the foreach loop termination from endforeach (plugin) to endforeach(plugin) in `windows/flutter/generated_plugins.cmake`

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ publish_to: none
 
 environment:
   sdk: 3.7.2
-  flutter: 3.29.3
+  flutter: 3.29.3 # Needs to match FLUTTER_VERSION in scripts/project_config.sh
 
 dependencies:
   dio: 5.8.0+1
