--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,6 +17,7 @@ jobs:
   extract-config:
     runs-on: ubuntu-latest
     outputs:
+      flutter_version: ${{ steps.extract.outputs.flutter_version }}
       min_coverage: ${{ steps.extract.outputs.min_coverage }}
       coverage_excludes: ${{ steps.extract.outputs.coverage_excludes }}
     steps:
@@ -24,15 +25,18 @@ jobs:
       - id: extract
         name: Extract configuration values
         run: |
+          # Extract FLUTTER_VERSION from project_config.sh
+          FLUTTER_VERSION=$(grep "FLUTTER_VERSION=" scripts/project_config.sh | cut -d'=' -f2 | tr -d '"' | tr -d "'")
           # Extract MIN_COVERAGE from project_config.sh
           MIN_COVERAGE=$(grep "MIN_COVERAGE=" scripts/project_config.sh | cut -d'=' -f2)
           # Extract COVERAGE_EXCLUDES from project_config.sh
           COVERAGE_EXCLUDES=$(grep "COVERAGE_EXCLUDES=" scripts/project_config.sh | cut -d'"' -f2)
           # Output as integer (no quotes)
+          echo "flutter_version=$FLUTTER_VERSION" >> $GITHUB_OUTPUT
           echo "min_coverage=$(echo $MIN_COVERAGE | tr -d '"' | tr -d "'")" >> $GITHUB_OUTPUT
           echo "min coverage may not work yet, may need to dig deeper"
           echo "coverage_excludes=$COVERAGE_EXCLUDES" >> $GITHUB_OUTPUT
-          echo "Using min_coverage: $(echo $MIN_COVERAGE | tr -d '"' | tr -d "'") and coverage_excludes: $COVERAGE_EXCLUDES"
+          echo "Using flutter_version: $FLUTTER_VERSION, min_coverage: $(echo $MIN_COVERAGE | tr -d '"' | tr -d "'"), and coverage_excludes: $COVERAGE_EXCLUDES"
 
   build:
     needs: extract-config
@@ -41,6 +45,7 @@ jobs:
       flutter_channel: stable
       format_directories: lib/src test
       min_coverage: 50
+      flutter_version: ${{ needs.extract-config.outputs.flutter_version }}
       coverage_excludes: ${{ needs.extract-config.outputs.coverage_excludes }}
       format_line_length: 100
 
@@ -53,7 +58,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.29.2'
+          flutter-version: ${{ needs.extract-config.outputs.flutter_version }}
           channel: 'stable'
 
       - name: Install dependencies
