--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -1,6 +1,7 @@
 name: Flutter CI
 
 on:
+  workflow_dispatch:
   push:
     branches: [ main ]
   pull_request:
@@ -56,6 +57,8 @@ jobs:
               '**/generated/**/*')    REGEX_FLAGS+=" -r '\/generated\/'" ;;
               '**/*.freezed.dart')   REGEX_FLAGS+=" -r '\.freezed\.dart$'" ;;
               '**/generated_plugin_registrant.dart') REGEX_FLAGS+=" -r 'generated_plugin_registrant\.dart$'" ;;
+              'lib/src/features/auth/presentation/auth_wrapper.dart') REGEX_FLAGS+=" -r '\/lib\/src\/features\/auth\/presentation\/auth_wrapper\.dart$'" ;;
+              'lib/src/features/auth/presentation/providers/auth_providers.dart') REGEX_FLAGS+=" -r '\/lib\/src\/features\/auth\/presentation\/providers\/auth_providers\.dart$'" ;;
               *) echo "Warning: Unhandled exclusion pattern '$pattern' in CI workflow" ;;
             esac
           done
@@ -112,6 +115,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup
     continue-on-error: true
+    if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v3
 
@@ -165,6 +169,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: setup # Depends on the setup job
     continue-on-error: true # Don't fail pipeline if FTL tests fail
+    if: github.event_name == 'workflow_dispatch'
     steps:
       - uses: actions/checkout@v3
 
@@ -197,8 +202,8 @@ jobs:
             --test build/app/outputs/apk/debug/app-debug-androidTest.apk \
             --device model=Pixel6,version=31,locale=en,orientation=portrait \
             --timeout 5m \
-            --results-bucket gs://YOUR_RESULTS_BUCKET_NAME # TODO: Replace with your bucket name
-            --project YOUR_GCP_PROJECT_ID # TODO: Replace with your GCP project ID
+            --results-bucket gs://memverse-project-test-results \
+            --project memverse-project
 
       - name: Check Firebase Test Lab Results (Optional)
         if: always() # Run even if gcloud command failed
