--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: memverse
 description: Scripture Memory mobile front end for www.memverse.com
-version: 0.1.0 (a2ef9b1)+11
+version: 0.1.1+10.696d70a
 publish_to: none
 
 environment:
