--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: memverse
 description: Scripture Memory mobile front end for www.memverse.com
-version: 1.0.0+1
+version: 0.1.2+60.e68da18
 publish_to: none
 
 environment:
