--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   json_annotation: ^4.9.0
   logger: ^2.0.2+1
   riverpod_annotation: ^2.6.1
+  feedback: ^3.1.0
+  path_provider: ^2.1.5
+  share_plus: ^11.0.0
 
 dev_dependencies:
   bdd_widget_test: 1.8.1
