--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ dependencies:
   intl: 0.19.0
   json_annotation: ^4.9.0
   logger: ^2.0.2+1
+  path_provider: ^2.1.3
   riverpod_annotation: ^2.6.1
+  share_plus: ^11.0.0
 
 dev_dependencies:
   bdd_widget_test: 1.8.1
