--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,23 +9,23 @@ environment:
 
 dependencies:
   dio: 5.8.0+1
-  feedback: ^3.1.0
+  feedback: 3.1.0
   flutter:
     sdk: flutter
-  flutter_hooks: ^0.21.2
+  flutter_hooks: 0.21.2
   flutter_localizations:
     sdk: flutter
   flutter_riverpod: 2.6.1
-  flutter_secure_storage: ^9.0.0
+  flutter_secure_storage: 9.2.4
   freezed_annotation: ^3.0.0
   hooks_riverpod: ^2.6.1
-  http: ^1.1.0
+  http: 1.3.0
   intl: 0.19.0
   json_annotation: ^4.9.0
-  logger: ^2.0.2+1
-  path_provider: ^2.1.3
-  riverpod_annotation: ^2.6.1
-  share_plus: ^11.0.0
+  logger: 2.5.0
+  path_provider: 2.1.5
+  riverpod_annotation: 2.6.1
+  share_plus: 11.0.0
 
 dev_dependencies:
   bdd_widget_test: 1.8.1
@@ -39,12 +39,14 @@ dev_dependencies:
   mockito: ^5.4.5
   mocktail: 1.0.4
   network_image_mock: ^2.1.1
+
   patrol: ^3.15.1
   patrol_finders: ^2.7.2
   riverpod_generator: ^2.6.5
+  test_api: any
   very_good_analysis: 7.0.0
 
-# Custom scripts for common tasks
+
 scripts:
   test: flutter test
   test_coverage: flutter test --coverage
