feat: Implement Netlify proxy for API requests and update dependencies
This commit introduces a Netlify proxy to handle API requests, addressing CORS issues for web deployments. It includes the following:

-   **Netlify Proxy Implementation**:
    -   Adds `netlify.toml` for configuring Netlify's build process, function directory, and redirect rules.
    -   Creates `netlify/functions/api.js` as a serverless Node.js function to act as an API proxy, forwarding requests and managing CORS headers.
    -   Includes `netlify/functions/package.json` to manage dependencies for the Netlify function.
-   **Updated Dart Code**:
    -   Introduces `api_constants.dart` with `apiBaseUrl` and `webApiPrefix` for API URL management.
    -   Modifies `verse_repository.dart` and `auth_service.dart` to use the Netlify proxy for web requests and direct API calls otherwise.
-   **CORS Handling**:
    -   Sets up the `api.js` function to handle CORS by adding `Access-Control-Allow-Origin` and other necessary headers to responses.
-   **Documentation**:
    -   Adds `netlify_deploy.md` which explains the Netlify CORS proxy setup, CORS, TOML and Netlify.
- **Other changes**:
    -   Skip golden tests for now.
    -   Adds `netlify/functions/node_modules/` and `.netlify/` to `.gitignore`.
    -   Updates `localizationsDelegates` and `supportedLocales` in `app_localizations.dart`.
    -   Migrates from `node-fetch` to `axios` in `package.json` for better reliability.

--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,12 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+# Node.js dependencies specific to Netlify functions
+netlify/functions/node_modules/
+
+# Netlify build artifacts
+.netlify/
+
 # Exceptions to the above rules.
 !**/ios/**/default.mode1v3
 !**/ios/**/default.mode2v3
