--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,25 @@
 [build]
 command = """
+    FLUTTER_DIR="/opt/flutter"
+    FLUTTER_VERSION="3.29.3"
+    # Check if cached Flutter exists and is the correct version
+    if [ -d "$FLUTTER_DIR/bin" ] && [ -f "$FLUTTER_DIR/version" ] && [ "$(cat $FLUTTER_DIR/version)" = "$FLUTTER_VERSION" ]; then
+      echo "Using cached Flutter $FLUTTER_VERSION"
+      export PATH="$FLUTTER_DIR/bin:$PATH"
+      # Ensure cached version has necessary artifacts for web/linux
+      flutter precache --web --linux
+    else
+      echo "Cloning Flutter $FLUTTER_VERSION..."
+      rm -rf $FLUTTER_DIR # Remove old version if exists
+      git clone https://github.com/flutter/flutter.git --depth 1 --branch $FLUTTER_VERSION $FLUTTER_DIR
+      echo $FLUTTER_VERSION > $FLUTTER_DIR/version
+      export PATH="$FLUTTER_DIR/bin:$PATH"
+      # Precache artifacts after fresh clone
+      flutter precache --web --linux
+    fi
+    # Verify Flutter installation
+    flutter --version
+    # Run the build
     flutter config --enable-web
     flutter build web --release
   """
