Update Netlify Build Process to use Flutter Archive. (this workd on my POC)
Refactors the Netlify build process to use a downloaded Flutter archive instead of cloning the repository. The changes include:

-   Downloads the Flutter stable release archive (version 3.29.3) directly from Google Storage.
-   Extracts the downloaded archive.
- Updates PATH environment variable to point to the extracted Flutter bin directory.
- Runs `flutter config --enable-web`.
- Runs `flutter pub get` to ensure dependencies are fetched.
-   Builds the Flutter web application using `flutter build web --release`.
-  Removes the previous caching logic that cloned the git repository.
- Removes precache as no longer necessary.
- Removes flutter --version output as no longer necessary.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,34 +1,12 @@
 [build]
-# Use Netlify's cache directory for Flutter installation
 command = """
-    FLUTTER_DIR="$NETLIFY_CACHE_DIR/flutter"
-    FLUTTER_VERSION="3.29.3"
-    echo "Checking for Flutter in $FLUTTER_DIR"
-    # Check if cached Flutter exists and is the correct version
-    if [ -d "$FLUTTER_DIR/bin" ] && [ -f "$FLUTTER_DIR/version" ] && [ "$(cat $FLUTTER_DIR/version)" = "$FLUTTER_VERSION" ]; then
-      echo "Using cached Flutter $FLUTTER_VERSION from $FLUTTER_DIR"
-      export PATH="$FLUTTER_DIR/bin:$PATH"
-      echo "Precaching Flutter artifacts (cached)..."
-      flutter precache --web --linux
-    else
-      echo "Cloning Flutter $FLUTTER_VERSION to $FLUTTER_DIR..."
-      rm -rf $FLUTTER_DIR # Remove old/incorrect version if exists
-      mkdir -p $NETLIFY_CACHE_DIR # Ensure the base cache directory exists
-      git clone https://github.com/flutter/flutter.git --depth 1 --branch $FLUTTER_VERSION $FLUTTER_DIR
-      # Store the cloned version in the directory for the next build's check
-      echo $FLUTTER_VERSION > "$FLUTTER_DIR/version"
-      export PATH="$FLUTTER_DIR/bin:$PATH"
-      echo "Precaching Flutter artifacts (cloned)..."
-      flutter precache --web --linux
-    fi
-    # Verify Flutter installation
-    echo "Verifying Flutter installation..."
-    flutter --version
-    # Run the build
-    echo "Configuring and building Flutter web..."
+    FLUTTER_VERSION="3.29.3" # Specify Flutter 3.29.3
+    curl -fSL https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_${FLUTTER_VERSION}-stable.tar.xz -o flutter.tar.xz
+    tar xf flutter.tar.xz
+    export PATH="$PWD/flutter/bin:$PATH"
     flutter config --enable-web
+    flutter pub get # Ensure dependencies are fetched
     flutter build web --release
-    echo "Build finished."
   """
 publish = "build/web"
 
