feat: Implement Netlify CORS proxy and update build process
- Adds a Netlify CORS proxy function (`netlify/functions/api.js`) and corresponding `package-lock.json` and `package.json` for handling API requests.
- Updates `netlify.toml` to include commands for:
  - Installing Flutter 3.29.3 during the build process.
  - Building the web app with the correct entry point (`lib/main_development.dart`).
  - Passing the `CLIENT_ID` environment variable via `--dart-define`.
  - Installing Node dependencies for the Netlify Function.
- Adds `netlify_deploy.md` to document the Netlify setup, CORS, and TOML usage.
- Updates documentation to include environment variable details and entry point configuration.
- Modifies the build process to use `npm install` for function dependencies and defines the correct entry point for the build.
- Updates dependency from `node-fetch` to `axios` in the `package.json` file.
- Adds log file `MEM-102_ai_prompts.log` to document the AI prompts and responses.

--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,11 @@ command = """
     curl -fSL https://storage.googleapis.com/flutter_infra_release/releases/stable/linux/flutter_linux_${FLUTTER_VERSION}-stable.tar.xz -o flutter.tar.xz
     tar xf flutter.tar.xz
     export PATH="$PWD/flutter/bin:$PATH"
+    # Install dependencies for the Netlify Function
+    cd netlify/functions
+    npm install
+    cd ../..
+    # Continue with the Flutter build
     flutter config --enable-web
     flutter pub get # Ensure dependencies are fetched
     flutter build web --release --dart-define=CLIENT_ID=$MEMVERSE_CLIENT_ID --target lib/main_development.dart
