--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,8 @@ command = """
     cd ../..
     # Continue with the Flutter build
     flutter config --enable-web
-    flutter pub get # Ensure dependencies are fetched
+    flutter precache --web 
+    flutter pub get 
     flutter build web --release --dart-define=CLIENT_ID=$MEMVERSE_CLIENT_ID --target lib/main_development.dart
   """
 publish = "build/web"
